# CanavarGraphicsEngine

./: .clang-format  .gitignore  BasicGraphicsEngine.pro  BasicShader.cpp  BasicShader.h  CMakeLists.txt  Camera.cpp  Camera.h  Helper.cpp  Helper.h  Light.cpp  Light.h  Main.cpp  Material.cpp  Material.h  Model.cpp  Model.h  ModelData.cpp  ModelData.h  Node.cpp  Node.h  README.md  RendererManager.cpp  RendererManager.h  Resources.qrc  Window.cpp  Window.h
Canavar/Editor/: CMakeLists.txt
Canavar/Editor/Resources/: City.json  CrossSection.json  DamagedHelmet.json  Empty.json  GasStation.json  Nodes.json  SimulatorNodes.json  Sponza.json  SponzaBig.json  Transparency.json  f16.json  mp7.json
Canavar/Editor/Resources/Models/Crossfire/: scene.gltf
Canavar/Editor/Resources/Models/GasStation/: license.txt  scene.gltf
Canavar/Editor/Resources/Models/HalfLife/: scene.gltf
Canavar/Editor/Resources/Models/Monster/: scene.gltf
Canavar/Editor/Resources/Models/abandoned_mansion/: license.txt  scene.gltf
Canavar/Editor/Resources/Models/container_18_mb/: license.txt  scene.gltf
Canavar/Editor/Resources/Models/cutter_9_mb/: license.txt  scene.gltf
Canavar/Editor/Resources/Models/f16/: license.txt  scene.gltf
Canavar/Editor/Resources/Models/f16c/: license.txt
Canavar/Editor/Resources/Models/military_truck_12_ton/: license.txt  scene.gltf
Canavar/Editor/Resources/Models/scientist_black_mesa/: license.txt  scene.gltf
Canavar/Editor/Resources/Simulator/engine/: engIO360C.xml
Canavar/Editor/Source/: Editor.cpp  Editor.h  ImGuiWidget.cpp  ImGuiWidget.h  Main.cpp
Canavar/Editor/Source/Simulator/: Aircraft.cpp  Aircraft.h  AircraftController.cpp  AircraftController.h  Converter.cpp  Converter.h  Simulator.cpp  Simulator.h
Canavar/Engine/: CMakeLists.txt  Engine.qrc  EngineBigObjects.qrc
Canavar/Engine/Resources/Shaders/: Aces.frag  Basic.frag  Basic.vert  Bitmap.frag  Bitmap.vert  Bloom.frag  Blur.frag  BoundingBox.frag  BoundingBox.vert  BrightPass.frag  ChromaticAberration.frag  Cinematic.frag  CircleLine.frag  CircleLine.geom  CircleLine.vert  Clouds.frag  Clouds.vert  ColorGrading.frag  Composition.frag  CrossSection.frag  CrossSection.geom  CrossSection.vert  DepthOfField.frag  FXAA.frag  Fxaa.frag  GodRays.frag  LensDistortion.frag  LightningStrike.geom  LightningStrike.vert  LightningStrikeQuadGenerator.frag  LightningStrikeQuadGenerator.geom  Line.frag  Line.vert  Model.frag  Model.vert  MotionBlur.frag  NozzleEffect.frag  NozzleEffect.vert  PointCloud.frag  PointCloud.vert  (+25 more)
Canavar/Engine/Resources/Sky/: SkyRGB.data  SkyRGBRad.data
Canavar/Engine/Source/: Main.cpp
Canavar/Engine/Source/Core/: Controller.cpp  Controller.h  ManagerProvider.h  Window.cpp  Window.h
Canavar/Engine/Source/Manager/: CameraManager.cpp  CameraManager.h  LightManager.cpp  LightManager.h  Manager.h  NodeManager.cpp  NodeManager.h  RenderingManager.cpp  RenderingManager.h  ShaderManager.cpp  ShaderManager.h
Canavar/Engine/Source/Node/: Node.cpp  Node.h
Canavar/Engine/Source/Node/Camera/: Camera.cpp  Camera.h  FreeCamera.cpp  FreeCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Canavar/Engine/Source/Node/Haze/: Haze.h
Canavar/Engine/Source/Node/Light/: DirectionalLight.cpp  DirectionalLight.h  Light.h  PointLight.h
Canavar/Engine/Source/Util/: Logger.cpp  Logger.h  Math.h  ModelImporter.cpp  ModelImporter.h  Quad.h  Shader.cpp  Shader.h  Util.cpp  Util.h
Canavar/MultipleViews/: CMakeLists.txt
Canavar/MultipleViews/Source/: Main.cpp  MultipleViews.cpp  MultipleViews.h
Canavar/RangeCalculator/: CMakeLists.txt
Canavar/RangeCalculator/Resources/: Checkerboard.json  GasStation.json  Gordon.json  Truck.json
Canavar/RangeCalculator/Source/: CameraCalibration.cpp  CameraCalibration.h  Main.cpp  RangeCalculator.cpp  RangeCalculator.h
Canavar/Simulator/: CMakeLists.txt  README.md
Canavar/Simulator/Resources/: Nodes.json  Nodes2.json  f16.json
Canavar/Simulator/Source/: Aircraft.cpp  Aircraft.h  AircraftController.cpp  AircraftController.h  Command.h  Constants.h  Converter.cpp  Converter.h  Main.cpp  PrimaryFlightData.h  Simulator.cpp  Simulator.h
Canavar/Viewer/: CMakeLists.txt
Canavar/Viewer/Resources/: World.json
Canavar/Viewer/Source/: Main.cpp  Viewer.cpp  Viewer.h
Simulator/: CMakeLists.txt
Simulator/Resources/Config/: World.json
Simulator/Resources/Models/Nozzle/: Nozzle.fbx
Simulator/Source/: Aircraft.cpp  Aircraft.h  AircraftController.cpp  AircraftController.h  Converter.cpp  Main.cpp  Window.cpp
projects/Editor/: CMakeLists.txt
projects/Editor/resources/Config/: Config.json  World.json  World_Crossfire.json
projects/Editor/resources/config/: world_shadow_debug.json
projects/Editor/src/: Main.cpp  Window.cpp
projects/Engine/: CMakeLists.txt
projects/Engine/include/: AABB.h  CameraManager.h  Config.h  Controller.h  DummyCamera.h  FreeCamera.h  IntersectionManager.h  Manager.h  Material.h  Mesh.h  Model.h  ModelDataNode.h  PersecutorCamera.h  PointLight.h  SelectableNodeRenderer.h  SelectedMeshParameters.h  ShaderManager.h  Speed.h  Terrain.h  TileGenerator.h
projects/Engine/resources/Shaders/: Basic.vert  Blur.frag  FirecrackerEffect.frag  LightningStrike.vert  LightningStrikeQuadGenerator.frag  LightningStrikeQuadGenerator.geom  MeshVertexRenderer.frag  MeshVertexRenderer.vert  ModelColored.frag  ModelTextured.frag  ModelTextured.vert  NodeInfo.frag  NozzleEffect.frag  PostProcess.frag  Quad.vert  Raycaster.vert  Sky.frag  Sky.vert  Terrain.frag  Terrain.tcs  Terrain.tes  Terrain.vert  VertexInfo.frag
projects/Engine/resources/shaders/: FirecrackerEffect.vert  LightningStrike.geom  LineStrip.frag  ModelColored.vert  NozzleEffect.vert
projects/Engine/src/: Config.cpp  Controller.cpp  DummyNode.cpp  FreeCamera.cpp  Gui.cpp  Haze.cpp  Helper.cpp  Light.cpp  LightManager.cpp  LightningStrikeBase.cpp  LightningStrikeGenerator.cpp  Mesh.cpp  Mouse.cpp  NozzleEffect.cpp  OpenGLVertexArrayObject.cpp  PerspectiveCamera.cpp  Resources.qrc  SelectedMeshParameters.cpp  ShaderManager.cpp  Sky.cpp  Terrain.cpp  TileGenerator.cpp
(+453 files in other folders)
